nav overlap fixed

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ nav {
   width: 100%;
   height: 130px;
   background-color: #858381;
-  padding-top: 25px;
 }
 
 .nav-left {
@@ -19,25 +18,20 @@ nav {
   padding: 30px;
 }
 
-.nav-right {
+.nav-links-container {
   position: relative;
-  bottom: 35px;
-  float: right;
-  padding-right: 30px;
+  top: 30px;
 }
 
-nav li {
-  display: inline-block;
-  width: 14%;
-  padding: 10px;
-  text-align: center;
-  margin-top: 20px;
+.nav-links {
+  padding: 30px;
+  padding-left: 65px;
+  padding-right: 65px;
 }
 
-nav li,
-.nav-left,
-.nav-right {
-  font-size: 24px;
+.nav-links,
+.nav-left {
+  font-size: 30px;
   font-family: Cambay, Helvetica, sans-serif;
 }
 
